# hypnotoad

./: .gitignore  CMakeLists.txt  hypnotoad.py
c_src/: hypnotoad.h  main.c  user.c
examples/: simple.htd
src/: main.clp
